# Multilingual-Mandi

./: .doc-healing.yml  .env.example  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  ENCRYPTION_PRIVACY_IMPLEMENTATION.md  Makefile  README.md  debug_classification.py  debug_conversation_flow.py  debug_disclaimer_ack.py  debug_professional_help.py  docker-compose.backend.yml  jest.config.js  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.hypothesis/constants/: 1af26d59f9c092f4  28d14759bc7fd9d3  35a375d8c60507e4  4869ab4ff4fd2b81  4f44aaf44984e502  6f3d42100e2424f6  77e3c717d690ed26  7f7e87b39089fc11  a324c0de060759cb  c2e77a59fc774cb4  c61c618fff027147  d5f60a54f7766664  d73d6e815416e546
.hypothesis/examples/04e6b3400353b141/: 3ff4adca1a079799
.hypothesis/examples/3ff4adca1a079799/: 1faf7b9ba1dd49f1  8a75ee652a1790dd  e2724d8e1020a5f8  f8c74622563384fc  fbce6a9e2549264b
.kiro/specs/ai-legal-aid/: design.md  requirements.md  tasks.md
.kiro/specs/multilingual-mandi/: design.md  requirements.md  tasks.md
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  demo_vendor_dashboard.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  test_basic_setup.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  health.py  products.py  profile.py  vendor_dashboard.py
backend/app/core/: auth.py  config.py  database.py  deps.py  redis.py
backend/app/models/: __init__.py  base.py  geographic.py  negotiation.py  product.py  transaction.py  user.py
backend/app/schemas/: __init__.py  auth.py  negotiation.py  product.py  profile.py  transaction.py  vendor_dashboard.py
backend/app/services/: __init__.py  file_service.py  product_service.py  user_service.py  vendor_dashboard_service.py
backend/scripts/: init-db.sql  run-tests.sh  start-dev.sh
backend/tests/: conftest.py  test_auth.py  test_auth_property.py  test_core_models.py  test_geographic_models.py  test_health.py  test_historical_data_integrity_property.py  test_multi_region_property.py  test_product_crud.py  test_product_management_property.py  test_profile.py  test_profile_api.py  test_user_management.py  test_vendor_dashboard.py  test_vendor_dashboard_completeness_property.py
src/: test-setup.ts
src/ai_legal_aid/: __init__.py  conversation_engine.py  disclaimer_service.py  encrypted_session_manager.py  encryption.py  legal_guidance_engine.py  main.py  resource_directory.py  session_manager.py
src/ai_legal_aid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ai_legal_aid/interfaces/: __init__.py  compliance.py  legal.py  resources.py  session.py  voice.py
src/ai_legal_aid/types/: __init__.py  base.py  models.py
src/interfaces/: disclaimer.ts  index.ts  legal.ts  resources.ts  session.ts  voice.ts
src/test-utils/: generators.ts  index.ts
src/types/: index.ts
tests/: __init__.py  conftest.py  strategies.py  test_conversation_engine.py  test_disclaimer_service.py  test_encrypted_session_manager.py  test_encryption.py  test_integration_encryption_privacy.py  test_legal_guidance_engine.py  test_properties.py  test_resource_directory.py  test_session_manager.py  test_types.py
